add Routing, implementede Page-Edit and Page-List, add Docker-Services
