# Grundgerüst einer Single Page App mit REST-Backend/Backend/src/api/openapi.yaml
@@ -88,7 +88,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Address'
+                  $ref: '#/components/schemas/Travel'
                 x-content-type: application/json
     post:
       tags:
@@ -115,7 +115,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Travel'
 
-  /travel/{id}:
+ /travel/{id}:
     get:
       tags:
       - Reise
